# EnigmaFix

./: .gitignore  .gitmodules  Build_Debug.sh  Build_Release.sh  CMakeLists.txt  Death end Re;Quest.CT  DeathEndReQuest2.CT  DragonStarVarnir.CT  LICENSE  MarySkelter2.CT  NeptuniaVirtualStars.CT  README-Bryce-PC.md  README.md  default.nix  v2r.CT
.github/workflows/: build-release.yml  cmake.yml
Binaries/Windows/: Config.ini
Binaries/Windows/Resources/Localization/: en.json  ja.json  zh.json
Binaries/Windows/Resources/Themes/: DERQ.json  DERQ2.json  MISC.json
Notes/: Roadmap.md  derq_UI_Scaling_SpecialK.txt  derq_camera.txt  derq_camera_zoom.txt  derq_fov.txt  derq_post-process_stuff.txt  derq_ui_stuff.txt  orochi logging.txt
Notes/.obsidian/: appearance.json  community-plugins.json  workspace.json
Notes/.obsidian/plugins/obsidian-style-settings/: data.json
Notes/.obsidian/plugins/obsidian-textgenerator-plugin/: data.json
Notes/.obsidian/themes/Tokyo Night/: theme.css
Notes/Camera/: DERQ Camera.md
Notes/Logging/: Logging Patterns.md
Notes/Rendering/: DERQ Post Processing.md  Render Targets.md
Notes/UI/: UI Addresses and Other Notes.md  UI Scaling (Via Shader Patches and Special K+3dMigoto).md
Resources/: EnigmaFix_Icon.kra  Resources.rc
Source/: dllmain.cpp
Source/Localization/: Localization.cpp  Localization.h
Source/Managers/: ConfigManager.cpp  ConfigManager.h  FramerateManager.cpp  FramerateManager.h  HookManager.cpp  HookManager.h  LogManager.cpp  LogManager.h  PatchManager.cpp  PatchManager.h  PluginManager.cpp  PluginManager.h  RenderManager.cpp  RenderManager.h  UIManager.cpp  UIManager.h
Source/Plugins/: Plugin_DERQ.cpp  Plugin_DERQ.h
Source/Settings/: PlayerSettings.cpp  PlayerSettings.h
Source/Utilities/: ColorHelper.cpp  ColorHelper.h  DXEnums.h  DXHelper.h  DisplayHelper.cpp  DisplayHelper.h  FOVHelper.cpp  FOVHelper.h  JsonHelper.cpp  JsonHelper.h  MemoryHelper.cpp  MemoryHelper.h  MemoryHelper.hpp  UITextureLoader.cpp  UITextureLoader.h
